fix layout overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,1 +1,8 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import "../node_modules/bootstrap/scss/functions";
+// Required
+@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/mixins";
+@import "../node_modules/bootstrap/scss/accordion";
+
+$accordion-body-padding-y: 50px;
